# pigaiwang-digital_humans-1.1

pigaiwang-digital_humans-1.1/: .gitignore  .pre-commit-config.yaml  Procfile  README.md  build.py  dev.py  main.py  pyproject.toml  setup.py
pigaiwang-digital_humans-1.1/app/: __init__.py  main.py
pigaiwang-digital_humans-1.1/app/api/: __init__.py
pigaiwang-digital_humans-1.1/app/api/form_response/: __init__.py  admin_log_response.py  admin_response.py  base.py  demo_auth_response.py  demo_response.py  student_response.py  user_response.py
pigaiwang-digital_humans-1.1/app/api/form_validation/: admin_log_validation.py  admin_validation.py  demo_auth_validation.py  demo_validation.py  student_validation.py  user_validation.py  users_validation.py
pigaiwang-digital_humans-1.1/app/api/routers/: __init__.py  admin_base_router.py  admin_log_router.py  demo_authrouter.py  demo_router.py  student_authrouter.py  student_router.py  videos_router.py
pigaiwang-digital_humans-1.1/app/auth/: __init__.py  admin.py  demo_dependency.py  jwt_manager.py  student_dependency.py
pigaiwang-digital_humans-1.1/app/common/: __init__.py  ai_enums.py  enums.py  exception.py  time_.py
pigaiwang-digital_humans-1.1/app/configs/: __init__.py  config.py  logger_config.py
pigaiwang-digital_humans-1.1/app/core/: __init__.py  config.py  encryption.py  redis_.py  s3_client_.py
pigaiwang-digital_humans-1.1/app/services/: __init__.py  admin_log_service.py  admin_service.py  ai_grading_service.py  answer_grading_service.py  demo_auth_service.py  demo_service.py  student_service.py
pigaiwang-digital_humans-1.1/app/storage/: __init__.py  base.py  database_models.py
pigaiwang-digital_humans-1.1/app/tasks/: __init__.py  broker.py  config.py  enums.py  exceptions.py  executor.py  handler.py  heartbeat.py  lock.py  logging.py  models.py  schedule.py  scheduler.py  service.py  worker.py
pigaiwang-digital_humans-1.1/app/tasks/broker_tasks/: __init__.py  test.py
pigaiwang-digital_humans-1.1/app/tasks/handlers/: __init__.py  test.py
pigaiwang-digital_humans-1.1/app/utils/: __init__.py  async_worker_id_allocator.py  common_tools.py  handle_exceptions.py  lexorank_key.py  logger.py  middlewares.py  snowflake_id.py  sync_worker_id_allocator.py  validation.py
pigaiwang-digital_humans-1.1/conf/: examples.env  examples.task.env
pigaiwang-digital_humans-1.1/deploy/docker/backend/: docker-compose.yml
pigaiwang-digital_humans-1.1/deploy/docker/servers/: docker-compose.yml
pigaiwang-digital_humans-1.1/docker/: .dockerignore  Dockerfile  docker_build.sh
